RESOLVED FIXED156276
Initial implementation of annex b.3.3 behavior was incorrect
https://bugs.webkit.org/show_bug.cgi?id=156276
Summary Initial implementation of annex b.3.3 behavior was incorrect
Saam Barati
Reported 2016-04-05 20:13:02 PDT
We need to preform the hoisting to var when evaluating the actual declaration, and not at the beginning of the block that contains the declaration.
Attachments
patch (10.03 KB, patch)
2016-04-06 19:54 PDT, Saam Barati
keith_miller: review+
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-yosemite (773.27 KB, application/zip)
2016-04-06 20:38 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (830.33 KB, application/zip)
2016-04-06 20:42 PDT, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (626.26 KB, application/zip)
2016-04-06 20:47 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (840.81 KB, application/zip)
2016-04-06 20:53 PDT, Build Bot
no flags
patch for landing (11.01 KB, patch)
2016-04-07 12:00 PDT, Saam Barati
no flags
patch for landing (11.00 KB, patch)
2016-04-07 12:01 PDT, Saam Barati
no flags
patch for landing (11.63 KB, patch)
2016-04-07 12:03 PDT, Saam Barati
no flags
patch for landing (11.69 KB, patch)
2016-04-07 12:06 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-04-06 19:54:37 PDT
WebKit Commit Bot
Comment 2 2016-04-06 19:55:56 PDT
Attachment 275851 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:27: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:28: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:29: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:30: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:31: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:32: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:33: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:37: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:38: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:39: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:40: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:41: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:42: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:43: Line contains tab character. [whitespace/tab] [5] Total errors found: 14 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Keith Miller
Comment 3 2016-04-06 20:19:51 PDT
Comment on attachment 275851 [details] patch r=me
Mark Lam
Comment 4 2016-04-06 20:27:32 PDT
Comment on attachment 275851 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=275851&action=review > Source/JavaScriptCore/ChangeLog:14 > + value to the binding in the "var" scope. I.e, we perform the following typo? /scope. I.e, we/scope i.e. we/ > Source/JavaScriptCore/tests/stress/sloppy-mode-function-hoisting.js:710 > + assert(outer() === 200); > + } Wow. This is some funky behavior. Anyway, maybe add an "assert(outer() === 200);" after this "}"?
Build Bot
Comment 5 2016-04-06 20:37:57 PDT
Comment on attachment 275851 [details] patch Attachment 275851 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1112359 New failing tests: js/function-declarations-in-switch-statement.html
Build Bot
Comment 6 2016-04-06 20:38:00 PDT
Created attachment 275855 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-04-06 20:42:08 PDT
Comment on attachment 275851 [details] patch Attachment 275851 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1112372 New failing tests: js/function-declarations-in-switch-statement.html
Build Bot
Comment 8 2016-04-06 20:42:11 PDT
Created attachment 275856 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2016-04-06 20:47:12 PDT
Comment on attachment 275851 [details] patch Attachment 275851 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1112374 New failing tests: js/function-declarations-in-switch-statement.html
Build Bot
Comment 10 2016-04-06 20:47:15 PDT
Created attachment 275858 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 11 2016-04-06 20:53:20 PDT
Comment on attachment 275851 [details] patch Attachment 275851 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1112377 New failing tests: js/function-declarations-in-switch-statement.html
Build Bot
Comment 12 2016-04-06 20:53:22 PDT
Created attachment 275860 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Saam Barati
Comment 13 2016-04-07 12:00:20 PDT
Created attachment 275908 [details] patch for landing
Saam Barati
Comment 14 2016-04-07 12:01:43 PDT
Created attachment 275909 [details] patch for landing
WebKit Commit Bot
Comment 15 2016-04-07 12:03:09 PDT
Attachment 275909 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:27: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:28: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:29: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:30: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:31: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:32: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:33: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:37: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:38: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:39: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:40: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:41: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:42: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:43: Line contains tab character. [whitespace/tab] [5] Total errors found: 14 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 16 2016-04-07 12:03:30 PDT
Created attachment 275910 [details] patch for landing
WebKit Commit Bot
Comment 17 2016-04-07 12:05:44 PDT
Attachment 275910 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:27: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:28: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:29: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:30: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:31: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:32: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:33: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:37: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:38: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:39: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:40: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:41: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:42: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:43: Line contains tab character. [whitespace/tab] [5] Total errors found: 14 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 18 2016-04-07 12:06:40 PDT
Created attachment 275911 [details] patch for landing
WebKit Commit Bot
Comment 19 2016-04-07 14:01:44 PDT
Comment on attachment 275911 [details] patch for landing Clearing flags on attachment: 275911 Committed r199179: <http://trac.webkit.org/changeset/199179>
WebKit Commit Bot
Comment 20 2016-04-07 14:01:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.